# ecs-bench

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: mass-query.rs  mass-spawn.rs  simple-spawn.rs
results/mass-query/100/report/: index.html
results/mass-query/1000/report/: index.html
results/mass-query/10000/report/: index.html
results/mass-query/bevy_ecs/report/: index.html
results/mass-query/flecs/report/: index.html
results/mass-query/hecs/report/: index.html
results/mass-query/legion/report/: index.html
results/mass-query/report/: index.html
results/mass-query/shipyard/report/: index.html
results/mass-spawn/1000/report/: index.html
results/mass-spawn/10000/report/: index.html
results/mass-spawn/100000/report/: index.html
results/mass-spawn/1000000/report/: index.html
results/mass-spawn/bevy_ecs/report/: index.html
results/mass-spawn/flecs/report/: index.html
results/mass-spawn/hecs/report/: index.html
results/mass-spawn/legion/report/: index.html
results/mass-spawn/report/: index.html
results/mass-spawn/shipyard/report/: index.html
results/report/: index.html
results/simple-spawn/10/report/: index.html
results/simple-spawn/100/report/: index.html
results/simple-spawn/1000/report/: index.html
results/simple-spawn/report/: index.html
src/: lib.rs
src/mass_query/: bevy_ecs.rs  flecs.rs  hecs.rs  legion.rs  shipyard.rs
src/mass_spawn/: bevy_ecs.rs  flecs.rs  hecs.rs  legion.rs  shipyard.rs
src/simple_spawn/: bevy_ecs.rs  flecs.rs  hecs.rs  legion.rs  mod.rs  shipyard.rs
(+333 files in other folders)
